--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,17 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World"
+
+  date_job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print the date
+        run: |
+          date
+
+  directory_job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print the directory 
+        run: |
+          echo "$(pwd)"
