--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Run Playwright tests
         run: npm run test:e2e
       - name: Render Deployment
+        if: ${{ github.event_name == 'push'}}
         uses: sws2apps/render-deployment@v2.0.0 
         with:
           serviceId: ${{ secrets.RENDER_SERVICE_ID }}
