--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,11 +28,13 @@ jobs:
       - name: Test
         run: npm run test
       - name: Install Playwright Browsers
+        if: ${{ github.actor != 'nektos/act' }}
         run: npx playwright install --with-deps
       - name: Run Playwright tests
+        if: ${{ github.actor != 'nektos/act' }}
         run: npm run test:e2e
       - name: Render Deployment
-        if: ${{ github.event_name == 'push'}}
+        if: ${{ github.event_name == 'push' && github.actor != 'nektos/act' }}
         uses: sws2apps/render-deployment@v2.0.0 
         with:
           serviceId: ${{ secrets.RENDER_SERVICE_ID }}
@@ -43,11 +45,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: github context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+      - name: commits
+        env:
+          COMMITS: ${{ toJson(github.event.commits) }}
+        run: echo "$COMMITS"
+      - name: commit messages
+        env:
+          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+        run: echo "$COMMIT_MESSAGES"
       - name: Bump version and push tag
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push'}}
         uses: anothrNick/github-tag-action@1.75.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAG_PREFIX: v
           PRERELEASE: true
-          DRY_RUN: false
+      - name: Show git tags
+        run: git tag
